substrate/frame/support/test/tests/runtime_ui/invalid_runtime_type_derive.stderr
error: expected one of: `RuntimeCall`, `RuntimeEvent`, `RuntimeError`, `RuntimeOrigin`, `RuntimeFreezeReason`, `RuntimeHoldReason`, `RuntimeSlashReason`, `RuntimeLockId`, `RuntimeTask`, `DispatchViewFunction`
  --> tests/runtime_ui/invalid_runtime_type_derive.rs:21:23
   |
21 |     #[runtime::derive(RuntimeInfo)]
   |                       ^^^^^^^^^^^
